// Vitest Snapshot v1

exports[`Component: Tag > ui > default 1`] = `
<div>
  <span
    class="badge rounded-pill text-bg-primary"
  >
    Maarten
  </span>
</div>
`;

exports[`Component: Tag > ui > with remove 1`] = `
<div>
  <span
    class="badge rounded-pill text-bg-primary"
  >
    Maarten
    <span
      class="close-button"
      role="button"
    >
      ×
    </span>
  </span>
</div>
`;
